[package]
name = "neo-bot"
version = "0.1.0"
authors = ["moritz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7"
rhai = { git = "https://github.com/jonathandturner/rhai" }
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.3"
rand = "0.7"